--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
 vdm:
-    resource: "@VdmBundle/Resources/config/routing.yml"
-    prefix:   /
+    resource: "@ApiBundle/Resources/config/routing.yml"
+    prefix:   /api
