--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
 vdm:
-    resource: "@ApiBundle/Resources/config/routing.yml"
+    type: rest
     prefix:   /api
+    resource: "@ApiBundle/Resources/config/routing.yml"
