--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "jms/serializer-bundle": "dev-master",
-        "friendsofsymfony/rest-bundle": "1.3.*"
+        "friendsofsymfony/rest-bundle": "1.3.*",
+        "symfony/dom-crawler": "2.6.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
