--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/dom-crawler": "2.6.*@dev"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "phpunit/phpunit": "4.1.*"
     },
     "scripts": {
         "post-root-package-install": [
